reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_846_col_5.log

*** crates/tracewake-core/src/projections.rs:846:5: replace phase3a_status -> Phase3AEmbodiedStatus with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace phase3a_status -> Phase3AEmbodiedStatus with Default::default()
@@ -838,54 +838,17 @@
                 episode.event_kind,
                 episode.sim_tick.value(),
                 episode.summary
             )
         })
 }
 
 fn phase3a_status(agent_state: &AgentState, viewer_actor_id: &ActorId) -> Phase3AEmbodiedStatus {
-    let mut need_summaries = agent_state
-        .needs_by_actor
-        .get(viewer_actor_id)
-        .into_iter()
-        .flat_map(|needs| needs.values())
-        .map(|need| NeedStatusEntry {
-            kind: need.kind().stable_id().to_string(),
-            band_label: need.band().stable_id().to_string(),
-            last_cause: need.last_change_cause().stable_id().to_string(),
-        })
-        .collect::<Vec<_>>();
-    need_summaries.sort();
-
-    let intention = agent_state
-        .active_intention_by_actor
-        .get(viewer_actor_id)
-        .and_then(|intention_id| agent_state.intentions.get(intention_id));
-    let intention_summary = intention.map(|intention| {
-        format!(
-            "active:{}:{}",
-            intention
-                .selected_routine_method
-                .as_ref()
-                .map(|id| id.as_str())
-                .unwrap_or("routine_unknown"),
-            intention.current_step.as_deref().unwrap_or("step_pending")
-        )
-    });
-    let routine_summary = intention
-        .and_then(|intention| intention.selected_routine_method.as_ref())
-        .map(|template_id| format!("routine:{}", template_id.as_str()));
-
-    Phase3AEmbodiedStatus {
-        need_summaries,
-        intention_summary,
-        routine_summary,
-        salient_interruption: phase3a_salient_interruption(agent_state, viewer_actor_id),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 fn phase3a_semantic_actions(
     agent_state: Option<&AgentState>,
     source: &EmbodiedProjectionSource<'_>,
     current_place_id: &PlaceId,
     viewer_actor_id: &ActorId,
 ) -> Vec<SemanticActionEntry> {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/projections.rs` has changed (1781904738.943923608s, 3s after last build at 1781904735.083923615s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `NeedStatusEntry`
  --> crates/tracewake-core/src/projections.rs:27:62
   |
27 |     DebugEventLogView, DebugEventSummary, EmbodiedViewModel, NeedStatusEntry, NotebookBeliefEntry,
   |                                                              ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `Phase3AEmbodiedStatus: Default` is not satisfied
   --> crates/tracewake-core/src/projections.rs:846:5
    |
846 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `Phase3AEmbodiedStatus`
    |
help: consider annotating `Phase3AEmbodiedStatus` with `#[derive(Default)]`
   --> crates/tracewake-core/src/view_models.rs:45:1
    |
 45 + #[derive(Default)]
 46 | pub struct Phase3AEmbodiedStatus {
    |

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
